--- a/source/features/clean-checks-list.css
+++ b/source/features/clean-checks-list.css
@@ -22,10 +22,8 @@
 	order: 2;
 }
 
-/* Dim successful/skipped/neutral checks */
-.merge-status-list:has(.octicon-x, .text-italic):not(
-		:hover
-	) /* Only if any checks are failing or in progress */
+/* Dim successful/skipped/neutral checks, only if any checks are failing or in progress */
+.merge-status-list:has(.octicon-x, .text-italic):not(:hover)
 	.merge-status-item:has(.octicon-check, .octicon-skip, .octicon-square-fill) {
 	opacity: 50%;
 }
